# ProjStatus

./: .gitignore  CLAUDE.md  LICENSE  README.md  USER_GUIDE.md  pyproject.toml  seed_demo.py  start_projstatus.bat
.dev-flow/: 01-requirements.md  02-review.md  04-validation.md  05-postmortem.md  change-requests-backlog.md  state.json
.dev-flow/03-increments/: increment-001.md  increment-002.md  increment-003.md  increment-004.md  increment-005.md  increment-006a.md  increment-006b.md  increment-007.md
.dev-flow/06-docs/: executive-summary.md  functionality.md  traceability-matrix.md
.dev-flow/06-docs/diagrams/: architecture.mmd  peer-roots-schema.mmd  writable-peer-sequence.mmd
app/: __init__.py  config.py  main.py  models.py  settings.py  utils.py
app/services/: __init__.py  exports.py  history.py  mermaid.py  storage.py
app/static/: app.js  styles.css  styles.redesign.css
app/templates/: base.html  dashboard.html  export_project.html  exports.html  inbox.html  new_project.html  project.html  risks.html  settings.html  templates.html
app/templates/partials/: _milestones_list.html  _plan_add_panels.html  project_board.html  project_dictionary.html  project_documents.html  (+7 more)
tests/: test_aggregates.py  test_changelog.py  test_document_render.py  test_identity_gate.py  test_inbox_attribution.py  test_input_sanitization.py  test_iso_week_label.py  test_mermaid_labels.py  test_peer_inbox.py  test_peer_roots_config.py  test_routes.py  test_settings.py  test_settings_page.py  test_storage.py  test_subtasks.py  test_week_chip_rendering.py  test_writable_peers.py
